@@ -48,27 +48,18 @@ public class Font {
 	}
 	
 	public void renderAtCentre(String text, Object2D object) {
-		//Get the width and height of the text
-		float textWidth = this.getWidth(text);
-		float textHeight = this.getHeight(text);
-		//Get the position
-		Vector2D p = object.getPosition();
-		//Calculate the position to render the text
-		float textX = (p.x + (object.width / 2)) - (textWidth / 2);
-		float textY = (p.y + (object.height / 2)) - (textHeight / 2);
-		//Render the text
-		this.render(text, textX, textY);
+		this.renderAtCentre(text, object, new Vector2D(0, 0));
 	}
 	
 	public void renderAtCentre(String text, Object2D object, Vector2D offset) {
 		//Get the width and height of the text
 		float textWidth = this.getWidth(text);
 		float textHeight = this.getHeight(text);
-		//Get the position
-		Vector2D p = object.getPosition();
+		//Get the centre of the object
+		Vector2D centre = object.getCentre();
 		//Calculate the position to render the text
-		float textX = (p.x + (object.width / 2)) - (textWidth / 2);
-		float textY = (p.y + (object.height / 2)) - (textHeight / 2);
+		float textX = centre.x - (textWidth / 2);
+		float textY = centre.y - (textHeight / 2);
 		//Add the offset
 		textX += offset.x;
 		textY += offset.y;
