@@ -21,6 +21,12 @@ import org.andor.utils.FileUtils;
 
 public class ImageLoader {
 	
+	/* The static method used to load an image given the file path (Assumes
+	 * external should be true) */
+	public static Image loadImage(String filePath) {
+		return loadImage(filePath, true);
+	}
+	
 	/* The static method used to load an image given the file path, and
 	 * the external variables */
 	public static Image loadImage(String filePath, boolean external) {
