@@ -14,31 +14,31 @@ import java.util.List;
 public class GUIGroup extends GUIComponent {
 	
 	/* The list of components within this group */
-	private List<GUIComponent> components;
+	private List<GUIComponent> groupComponents;
 	
 	/* The constructor */
 	public GUIGroup(String name) {
 		//Call the super constructor
-		super(null, 0, 0);
+		super(null);
 		//Assign the variables
 		this.name = name;
-		this.components = new ArrayList<GUIComponent>();
+		this.groupComponents = new ArrayList<GUIComponent>();
 	}
 	
 	/* The method used to update this component */
 	public void updateComponent() {
 		//Go through all of the components within this group
-		for (int a = 0; a < this.components.size(); a++)
+		for (int a = 0; a < this.groupComponents.size(); a++)
 			//Update the current component
-			this.components.get(a).update();
+			this.groupComponents.get(a).update();
 	}
 	
 	/* The method used to render this component */
 	public void renderComponent() {
 		//Go through all of the components within this group
-		for (int a = 0; a < this.components.size(); a++)
+		for (int a = 0; a < this.groupComponents.size(); a++)
 			//Render the current component
-			this.components.get(a).render();
+			this.groupComponents.get(a).render();
 	}
 	
 	/* The method used to add a component to this group */
@@ -48,11 +48,11 @@ public class GUIGroup extends GUIComponent {
 		//Link the component to this
 		this.link(component);
 		//Add the component to the list of components
-		this.components.add(component);
+		this.groupComponents.add(component);
 	}
 	
 	/* The set/get methods */
-	public void setComponents(List<GUIComponent> components) { this.components = components; }
-	public List<GUIComponent> getComponents() { return this.components; }
+	public void setGroupComponents(List<GUIComponent> groupComponents) { this.groupComponents = groupComponents; }
+	public List<GUIComponent> getGroupComponents() { return this.groupComponents; }
 	
 }
